tests/netconvert/import/XML/errors/broken_edge/edge#tonode__missing4/errors.netconvert
Error: The to-node is not given for edge '4'.
Quitting (on error).
